feat: Add PromQL rewriter

--- a/specs/iac/import/grafana/node/datakit.conf
+++ b/specs/iac/import/grafana/node/datakit.conf
@@ -45,7 +45,7 @@ ulimit = 64000
   cache_clean_interval = "5s"
 
 [dataway]
-  urls = ["https://openway.guance.com?token=tkn_cda37760fbf042caab537f05cb05eba4"]
+  urls = ["https://openway.guance.com?token="]
   timeout = ""
   http_proxy = ""
   max_idle_conns_per_host = 0
