--- a/specs/iac/import/grafana/node/prom.conf
+++ b/specs/iac/import/grafana/node/prom.conf
@@ -1,5 +1,8 @@
 [[inputs.prom]]
   url = "http://node-exporter:9100/metrics"
   source = "prom"
-  metric_types = ["counter", "gauge"]
+  metric_types = []
   interval = "60s"
+  measurement_name = "prom"
+  [inputs.prom.tags]
+    job = "DataKit"
